<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp">

        <TextView
            android:id="@+id/tv_saludo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAllCaps="true"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="30dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:fontFamily="sans-serif-black"
                android:textAllCaps="true"
                android:layout_marginTop="30dp"
                android:text="@string/parrafo1"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="15dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/parrafo2"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="15dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:fontFamily="sans-serif-light"

                android:text="@string/parrafo3"
                android:textAlignment="center"
                android:paddingLeft="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/White"
                android:textSize="15dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>